Add extra buttons and text

--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
                         <p class="text-muted">three.js videogame</p>
                     </div>
                 </div>
+              <div class="row">
+                  <div class="col-lg-12 text-center">
+                      <a href="#aboutme" class="page-scroll btn btn-xl">About Me</a>
+                  </div>
+              </div>
             </div>
         </div>
     </section>
@@ -160,6 +165,8 @@
                         <ul class="list-inline social-buttons">
                             <li><a href="https://github.com/sean1rose"><i class="fa fa-github"></i></a>
                             </li>
+                            <li><a href="mailto:sean1rose@gmail.com?subject=Emailing_you_from_seanrose.io"><i class="fa fa-envelope-o"></i></a>
+                            </li>                            
                             <li><a href="https://linkedin.com/in/sean1rose/"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
@@ -170,7 +177,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">I love listening to, sharing and discovering new music, health, fitness and minfulness, sneaker and street culture, fantasy football and of course, technology. I'm particularly fascinated by creating something out of nothing and by making things look nice. </p>
+                    <p class="large text-muted">I love listening to, sharing and discovering new music. I'm passionate about health, fitness and minfulness, sneaker and street culture, fantasy football, and technology. I'm particularly fascinated by creating something out of nothing and the process of making things look cool. </p>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <a href="#page-top" class="page-scroll btn btn-xl">Up Top</a>
                 </div>
             </div>
         </div>
