Subbed Lost Paws into portfolio, tidied up About Me section

--- a/index.html
+++ b/index.html
@@ -107,9 +107,24 @@
                         <p class="text-muted">distributed computing platform</p>
                     </div>
                 </div>
-                <!--Portfolio Item #2 -->
+                <!--Portfolio Item #2 - Lost Paws -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/portfolio4.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Lost Paws</h4>
+                        <p class="text-muted">lost pet database</p>
+                    </div>
+                </div>
+                <!--Portfolio Item #3 - AbveAspirations -->
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -120,21 +135,6 @@
                     <div class="portfolio-caption">
                         <h4>AbveAspirations</h4>
                         <p class="text-muted">dream saver</p>
-                    </div>
-                </div>
-                <!--Portfolio Item #3 -->
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/portfolio3.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Into The Deep</h4>
-                        <p class="text-muted">three.js videogame</p>
                     </div>
                 </div>
               <div class="row">
@@ -177,10 +177,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">I love listening to, sharing and discovering new music. I'm passionate about health, fitness and minfulness, sneaker and street culture, fantasy football, and technology. I'm particularly fascinated by creating something out of nothing and the process of making things look cool. </p>
+                    <p class="xxlarge text-muted">Hi there my name is Sean!</p>
+                    <p class="xlarge text-muted">I create cool, tidy, little things on the internet.</p>
+                    <p class="large text-muted">I have a solid, foundational knowledge of modern Javascript development using frameworks such as Angular.js, Node.js and the rest of the MEAN stack. I like to combine these technologies with responsive front-end design using HTML5 and CSS3.</p>
+                    <p class="large text-muted">I love listening to, sharing and discovering new music. I'm passionate about fitness and minfulness, sneaker and street culture, fantasy football and technology. But above all else, I'm working my tail off so I can get better every, single day.</p>
                 </div>
             </div>
-            <br>
+            <br><br>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <a href="#page-top" class="page-scroll btn btn-xl">Up Top</a>
@@ -202,7 +205,7 @@
     <!-- Portfolio Modals -->
     <!-- Use the modals below to showcase details about your portfolio projects! -->
 
-    <!-- Portfolio Modal 1 -->
+    <!-- Portfolio Modal 1: Crowd Crunch -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -219,7 +222,7 @@
                             <h2>Crowd Crunch</h2>
                             <a href="http://www.crowdcrunch.io"><p class="item-intro text-muted">crowdcrunch.io</p></a>
                             <a href="http://www.crowdcrunch.io"><img class="img-responsive" src="img/portfolio/portfolio1.png" alt=""></a>
-                            <p><a href="http://www/crowdcrunch.io">Distributed computing platform</a> where users can donate their computing power to projects.</p>
+                            <p><a href="http://www/crowdcrunch.io">Distributed computing platform</a> where users can donate their computing power to projects (MEAN stack).</p>
                             <p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
@@ -229,8 +232,34 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 2 -->
+    <!-- Portfolio Modal 2: Lost Paws -->
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Lost Paws</h2>
+                            <a href="http://www.lostpaws.io"><p class="item-intro text-muted">lostpaws.io</p></a>
+                            <a href="http://www.lostpaws.io"><img class="img-responsive img-centered" src="img/portfolio/portfolio4.png" alt=""></a>
+                            <p><a href="http://www.lostpaws.io">Lost pet database</a> reconnecting lost pets with their owners (MEAN stack)</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 3: AbveAspirations-->
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -245,7 +274,7 @@
                             <h2>AbveAspirations</h2>
                             <a href="http://www.abveaspirations.com"><p class="item-intro text-muted">abveaspirations.com</p></a>
                             <a href="http://www.abveaspirations.com"><img class="img-responsive img-centered" src="img/portfolio/portfolio2.png" alt=""></a>
-                            <p><a href="http://designmodo.com/startup/?u=787">Dream saver vision board</a> to remind users of their goals and ambitions.</p>
+                            <p><a href="http://www.abveaspirations.com">Dream saver vision board</a> to remind users of their goals and ambitions.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -253,33 +282,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Portfolio Modal 3 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <!-- Project Details Go Here -->
-                            <h2>Into The Deep</h2>
-                            <a href="https://amber-elk-game.firebaseapp.com/"><p class="item-intro text-muted">amber-elk-game.firebaseapp.com</p></a>
-                            <a href="https://amber-elk-game.firebaseapp.com/"><img class="img-responsive img-centered" src="img/portfolio/portfolio3.png" alt=""></a>
-                            <p><a href="https://www.behance.net/MathavanJaya">Three Dimensional intergalactic videogame</a> built using three.js</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
 
     <!-- jQuery -->
