Fixed about me blurb

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="xxlarge text-muted">Hi there my name is Sean!</p>
-                    <p class="xlarge text-muted">I create cool, tidy, little things on the internet.</p>
+                    <p class="xxlarge text-muted">Hey there my name is Sean!</p>
+                    <p class="xlarge text-muted">I'm a Javascript Ninja and MEAN-Stack Enthusiast.</p>
                     <p class="large text-muted">I have a solid, foundational knowledge of modern Javascript development using frameworks such as Angular.js, Node.js and the rest of the MEAN stack. I like to combine these technologies with responsive front-end design using HTML5 and CSS3.</p>
                     <p class="large text-muted">I love listening to, sharing and discovering new music. I'm passionate about fitness and minfulness, sneaker and street culture, fantasy football and technology. But above all else, I'm working my tail off so I can get better every, single day.</p>
                 </div>
